fix: z-index issue

--- a/src/components/Modal/AccountSwitchModal/style.module.css
+++ b/src/components/Modal/AccountSwitchModal/style.module.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     margin-top: 0.5rem;
     margin-right: 40px;
-    z-index: 1;
+    z-index: 3;
 }
 
 .cross {
